--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
     "email": "elias304162@gmail.com",
     "url": "https://github.com/eliaslazcano"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/eliaslazcano/helpers.git"
+  },
   "license": "MIT"
 }
